# group4webshop

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  package-lock.json  prod_img.Dockerfile
Documents/: Design Guidelines.md  IDATA2301_sprint_reports.md  IDATA2306_sprint_reports.md  Webside - Wireframe.bmpr  Website wireframe.bmpr  project_plan.md
database/: README.md  docker-compose.yaml  initialize_db.bat  initialize_db.sh  initialize_dev_db.bat  initialize_dev_db.sh  run_docker_compose_and_create_db.bat  run_docker_compose_and_create_db.sh
deployment/: README.md  docker-compose.yaml  (+4 more)
webshop_server/: Cargo.toml  README.md  build.rs  certificate.pem  privatekey.pem  sqlx-data.json
webshop_server/migrations/2023-01-16-074108_Product/: down.sql  up.sql
webshop_server/migrations/2023-01-16-074498_Status/: up.sql
webshop_server/migrations/2023-01-16-074499_Role/: down.sql  up.sql
webshop_server/migrations/2023-01-16-074500_User/: down.sql  up.sql
webshop_server/migrations/2023-01-16-074502_Orders/: down.sql  up.sql
webshop_server/migrations/2023-01-16-074502_ProductOrder/: down.sql  up.sql
webshop_server/migrations/2023-01-16-074620_Order/: down.sql  up.sql
webshop_server/migrations/2023-01-16-074620_ProductOrder/: up.sql
webshop_server/migrations/2023-01-16-074810_Status/: down.sql  up.sql
webshop_server/migrations/2023-01-16-074837_User/: up.sql
webshop_server/migrations/2023-01-16-074950_Role/: up.sql
webshop_server/postman/: Admin.postman_collection.json  License manager.postman_collection.json  README.md  dev.postman_environment.json  product tests set.postman_collection.json
webshop_server/src/: data_access.rs  main.rs  openapi_doc.rs  routes.rs  schema.rs  serving_images.rs  utils.rs
webshop_server/src/data_access/: auth.rs  category.rs  company.rs  error_handling.rs  license.rs  product.rs  testimonial.rs  user.rs
webshop_server/src/data_access/product/: description.rs
webshop_server/src/middlewares/: auth.rs
webshop_server/src/routes/: openapi_doc.rs  private.rs  public.rs  serving_images.rs
webshop_server/src/routes/private/: auth.rs  companies_protected.rs  licenses_protected.rs  me.rs  products_protected.rs  testimonials_protected.rs  users_protected.rs
webshop_server/src/routes/private/products_protected/: descriptions_protected.rs
webshop_server/src/routes/private/products_protected/descriptions_protected/: description_utils.rs
webshop_server/src/routes/public/: auth.rs  categories.rs  companies.rs  company.rs  licenses.rs  mod.rs  products.rs  testimonials.rs  users.rs
webshop_server/src/routes/public/products/: descriptions.rs
webshop_server/src/routes/public/products/descriptions/: description_utils.rs
webshop_server/src/utils/: auth.rs  email.rs  img_multipart.rs
webshop_server/static/: 2ndfile.html  index.html
(+141 files in other folders)
