[package]
name = "webshop_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-session = "0.7.2"
actix-web = "4.2.1"
actix-web-static-files = "4.0.0"
dotenvy = "0.15.6"
env_logger = "0.10"
log = "0.4"
serde = "1.0.152"
serde_json = "1.0.91"
sqlx = { version = "0.6", features = [ "runtime-actix-rustls" , "postgres", "macros", "offline" ] }
static-files = "0.2.3"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }

[build-dependencies]
static-files = "0.2.3"
dotenvy = "0.15.6"