[package]
name = "webshop_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-multipart = "0.5.0"
actix-session = {version = "0.7.2", features = ["cookie-session"] }
actix-web = { version = "4.3.1", features = ["cookie", "rustls"] }
actix-web-httpauth = "0.8.0"
chrono = { version = "0.4.23", features = ["serde"] }
actix-web-static-files = "4.0.0"
dotenvy = "0.15.6"
env_logger = "0.10"
futures = "0.3.26"
futures-util = "0.3"
image = "0.24.5"
log = "0.4"
rand = "0.8.5"
serde = "1.0.152"
serde_json = "1.0.91"
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres", "macros", "offline", "chrono"] }
static-files = "0.2.3"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
uuid = { version = "1.3.0", features = ["v4"] }
argon2 = "0.4.1"
sanitize-filename = "0.4.0"
rustls = "0.20.8"
rustls-pemfile = "1.0.2"

[build-dependencies]
static-files = "0.2.3"
dotenvy = "0.15.6"
